# wave-platform

./: .env.example  .gitignore  CLAUDE.md  DEMO.md  DEPLOY.md  README.md  docker-compose.yml
agents/: README.md  WORKFLOW.md
core/: Cargo.toml  Dockerfile  README.md
core/migrations/: 001_core_domain.sql  002_validator_relationship.sql  003_evidence_state.sql  004_metric_identity.sql
core/src/: admin.rs  db.rs  domain.rs  lib.rs  main.rs
core/tests/: domain.rs
docs/: ARCHITECTURE.md  BACKLOG.md  DEPLOYMENT_PLAN.md  ENGINEERING.md  LOCAL_AGENT_HANDOFF.md  PROJECT_BRIEF.md  PROTOTYPE_LEARNINGS.md  ROADMAP.md  TRACEABILITY.md
handoffs/: README.md  SPEC-001-H01-core-skeleton.md  SPEC-001-H02-server-skeleton.md  SPEC-001-H03-web-skeleton.md  SPEC-001-H04-infra-ci.md  SPEC-002-H01-migrations-db.md  SPEC-002-H02-auth-sessions.md  SPEC-002-H03-orgs-rbac.md  SPEC-002-H04-reporting-chain.md  SPEC-003-H01-core-schema.md  SPEC-003-H02-core-rules.md  SPEC-003-H03-core-summary.md  SPEC-003-H04-server-proxy.md  SPEC-004-H01-relationship-migration.md  SPEC-004-H02-significance-compute.md  SPEC-004-H03-relationship-forward.md  SPEC-004-H04-ac-tests.md  SPEC-005-H01-state-model.md  SPEC-005-H02-listing-decide.md  SPEC-005-H03-flow-endpoints.md  SPEC-005-H04-e2e-suite.md  SPEC-006-H01-policy-passthrough.md  SPEC-006-H02-auth-shell.md  SPEC-006-H03-profile-cards.md  SPEC-006-H04-component-tests.md  SPEC-007-H01-store-provider.md  SPEC-007-H02-companion-endpoints.md  SPEC-007-H03-share-forward.md  SPEC-007-H04-green.md  SPEC-008-H01-metric-identity.md  SPEC-008-H02-normalization.md  (+54 more)
(+270 files in other folders)
